--- a/adminpanel/templates/adminpanel/edit_user.html
+++ b/adminpanel/templates/adminpanel/edit_user.html
@@ -29,7 +29,7 @@
                 </div>
                 <button type="submit"
                     class="self-end bg-purple-600 text-white py-2 px-4 rounded-lg hover:bg-purple-700 transition">
-                    Log In
+                    Update
                 </button>
             </form>
         </div>
